# seo-aeo-agents

./: .agents-cli-spec.md  .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  main.py
app/: __init__.py  a2a_app.py  agent.py  config.py  embeddings.py  fast_api_app.py  guardrails.py  observability.py  phases.py  run_local.py
app/app_utils/: telemetry.py  typing.py
app/knowledge/: 00_google_crawlable_links.md  10_seo_process.md  20_aeo_geo.md  README.md  versions.yaml
app/knowledge_base/: __init__.py  ingest.py
app/schemas/: __init__.py  reports.py  scorecard.py
app/skills/: __init__.py  action_plan.md  aeo_specialist.md  backlink.md  competitor_discovery.md  content_optimizer.md  content_writer.md  critic.md  implementation.md  improvement_reporter.md  keyword_research.md  monitoring.md  root_agent.md  scorer.md  serp_aeo.md  strategy_synthesizer.md  technical_audit.md  verifier.md
app/sub_agents/: __init__.py  aeo.py  collectors.py  execution.py  strategy.py
app/tools/: __init__.py  cms_publish_tools.py  crawler_tools.py  ga4_tools.py  gsc_tools.py  knowledge_retrieval.py  local_seo_mcp.py  pagespeed_crux_tools.py  repo_tools.py  scoring_tools.py  semrush_mcp.py  site_build_tools.py
eval/: __init__.py  cases.yaml  gate.py  graders.py  run_eval.py  selfcheck.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: ActionPlan.jsx  ActivityFeed.jsx  ChangeLog.jsx  ScoreCard.jsx
integrations/: __init__.py  langchain_bridge.py
seo_data_mcp/: __init__.py  authority.py  server.py  store.py
