[project]
name = "seo-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "your@email.com"},
]



dependencies = [
    "google-adk[gcp,a2a]>=2.0.0,<3.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    # --- SEO Agent runtime deps ---
    "mcp>=1.0.0",              # Semrush / CMS MCP toolsets (McpToolset)
    "requests>=2.31.0",        # crawler_tools, pagespeed/crux HTTP calls
    "beautifulsoup4>=4.12.0",  # crawler_tools HTML / link-anchor auditing
    "lxml>=5.0.0",             # fast HTML parser backend for bs4
    "numpy>=1.26.0",           # local RAG vector store (cosine similarity)
    "pyyaml>=6.0",             # knowledge corpus versions.yaml
    "litellm>=1.50.0",         # OpenAI / non-Gemini models via ADK LiteLlm
    "openai>=1.40.0",          # OpenAI provider (LLM + embeddings)
    "langsmith>=0.1.0",        # observability/tracing for the OpenAI path (via LiteLLM)
    "google-api-python-client>=2.100.0",  # Google Search Console (real rankings/clicks)
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
# Heavy LangChain stack — only needed to run the DeepAgents bridge (integrations/).
langchain = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "deepagents>=0.0.5",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app", "api", "seo_data_mcp"]


